--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,6 +1,6 @@
-.App {
-    display: flex;
-    flex-direction: column;
+
+.add {
+    margin-top: 100px;
     position: relative;
 }
 
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.textField{
+.textField {
     width: 100%;
 }
 
